Fix broken link

--- a/blog/2024-01-01-games-2023.md
+++ b/blog/2024-01-01-games-2023.md
@@ -37,7 +37,7 @@ The last AAA game of the year I played was **Mario Wonder**. I’ve loved most M
 
 Now onto some indie darlings.
 
-Teenage dinosaurs facing the end of the world. [Goodbye Volcano High](https://goodbyevolcanohigh.com/) is one of the most ambitious musical VNs I’ve ever experienced. ~~I think I have about 1 hour left and I’m dragging my feet on it because I know the end will make me sad.~~ (Finished this hours before midnight on New Years Eve!) It has a lot of interesting stuff going on mechanic wise, small little interactions that keep you physically invested in controlling the character in small ways. The music was the big selling point for me though, I’ve been listening to the [album](​​https://dabuaudio.bandcamp.com/album/goodbye-volcano-high-original-game-soundtrack) on repeat for weeks.
+Teenage dinosaurs facing the end of the world. [Goodbye Volcano High](https://goodbyevolcanohigh.com/) is one of the most ambitious musical VNs I’ve ever experienced. ~~I think I have about 1 hour left and I’m dragging my feet on it because I know the end will make me sad.~~ (Finished this hours before midnight on New Years Eve!) It has a lot of interesting stuff going on mechanic wise, small little interactions that keep you physically invested in controlling the character in small ways. The music was the big selling point for me though, I’ve been listening to the [the original sound track](https://dabuaudio.bandcamp.com/album/goodbye-volcano-high-original-game-soundtrack) on repeat for weeks.
 
 [NUTS!](https://nuts.game/) I’m not exclaiming this loudly, the title is all in the cap. But the exclamation point was added by me! This game was a gem to find. A natural surveillance game where you set up cameras in a forest to watch squirrels run around in the night. A game targeted specifically at me! I found this game rather scary (you are alone in the woods and this is a big fear of mine in the real world). It’s really not scary but has some minor suspense floating about. This game is available on so many systems now, please play this game so people make more squirrel games.
 
