--- a/blog/2024-01-26-week4-wap.md
+++ b/blog/2024-01-26-week4-wap.md
@@ -54,19 +54,19 @@ After my conclusion of “too much detail = bad” I was excited to get some ide
 
 Started with fingers. Seems to make sense to start with the small part of a bigger object. I’m pretty familiar with the tube or sausages approach to drawing fingers but this was the first time I saw it done with a variety of perspectives.
 
-Reference: (Screenshot from a how to draw hands video)[https://www.proko.com/course-lesson/how-to-draw-hands-details-for-realistic-hands/assignments].
+Reference: [Screenshot from a how to draw hands vide](https://www.proko.com/course-lesson/how-to-draw-hands-details-for-realistic-hands/assignments).
 
 ![](/img/wap/wap-4.4.2.jpg)
 
 I enjoy the box breakdown of hands, really helps to keep the 3D shape of the hand. But as I worked on these I did start to feel like they were too realistic to really be a style study.
 
-Reference: (Tweet)[https://twitter.com/GY_ANIFORCE/status/1207239639389466625].
+Reference: [Tweet](https://twitter.com/GY_ANIFORCE/status/1207239639389466625).
 
 ![](/img/wap/wap-4.4.3.jpg)
 
 Now here are some hands that really embrace the angular-ness of fingers! Each finger looks so strong and expressive. But look at them the wrong way and I get confused at what I’m looking at.
 
-Reference: (Kiwi Byrd Patreon)[https://www.patreon.com/posts/16945474].
+Reference: [Kiwi Byrd Patreon](https://www.patreon.com/posts/16945474).
 
 ![](/img/wap/wap-4.4.4.jpg)
 
@@ -74,7 +74,7 @@ I fell in love with this style. So sleek and simple but so expressive. The lines
 
 Reference: [Dom "Scruffy" Murphy on ArtStation](https://www.artstation.com/artwork/0XmZAe).
 
-![](/img/wap/wap-4.4.4.jpg)
+![](/img/wap/wap-4.4.5.jpg)
 
 I caught this one last minute on Pinterest right before I started my drawing session. It was a style different from the other 2 previous ones, more cartoony, which was very much something I wanted to try. Just get even simpler but also rounder and cuter. It makes the hands stand out less but possibly easier to execute.
 
@@ -90,7 +90,7 @@ Test day. After my coloured pigeon piece from last week I decided that I wanted 
 
 Then I wanted to do something a little more detailed. Something that could be part of a larger piece where maybe the focus of the illustration is on the hands.
 
-![](wap-4.5.2.jpg)
+![](/img/wap/wap-4.5.2.jpg)
 
 My girlfriend says this looks like a tattoo design and after she said it I could see it. Add a bit more ling definition to the flame and it could be a weird clavicle piece.
 
