--- a/blog/2024-01-04-week1-wap.md
+++ b/blog/2024-01-04-week1-wap.md
@@ -4,7 +4,7 @@ description: First week of my new art practice schedule
 slug: wap-1
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 image: /img/wap/wap-1.3.1.jpg
 ---
 
