--- a/blog/2024-01-13-week2-wap.md
+++ b/blog/2024-01-13-week2-wap.md
@@ -4,7 +4,7 @@ description: Week 2 is pangolins
 slug: wap-2
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 image: /img/wap/wap-2.3.3.jpg
 ---
 
