--- a/blog/2024-01-19-week3-wap.md
+++ b/blog/2024-01-19-week3-wap.md
@@ -4,7 +4,7 @@ description: Week 3 - Pigeons
 slug: wap-3
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 image: /img/wap/wap-3.3.3.jpg
 ---
 
