--- a/blog/2024-01-26-week4-wap.md
+++ b/blog/2024-01-26-week4-wap.md
@@ -4,7 +4,7 @@ description: Week 4 - Hands
 slug: wap-4
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-4.3.3.jpg
 ---
 
