--- a/blog/2024-02-04-week5-wap.md
+++ b/blog/2024-02-04-week5-wap.md
@@ -4,7 +4,7 @@ description: Week 5 - Hair styles
 slug: wap-5
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-5.3.2.jpg
 ---
 
