--- a/blog/2024-02-09-week6-wap.md
+++ b/blog/2024-02-09-week6-wap.md
@@ -4,7 +4,7 @@ description: Week 6 - Goblins
 slug: wap-6
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-6.5.jpg
 ---
 
