--- a/blog/2024-02-17-week7-wap.md
+++ b/blog/2024-02-17-week7-wap.md
@@ -4,7 +4,7 @@ description: Week 7 - Rabbits
 slug: wap-7
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-7.2.jpg
 ---
 
