--- a/blog/2024-02-24-week8-wap.md
+++ b/blog/2024-02-24-week8-wap.md
@@ -4,7 +4,7 @@ description: Week 8 - Lighthouses and landscapes
 slug: wap-8
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-8.3.jpg
 ---
 
