--- a/blog/2024-03-01-week9-wap.md
+++ b/blog/2024-03-01-week9-wap.md
@@ -4,7 +4,7 @@ description: Week 9 - Trees
 slug: wap-9
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-9.5.jpg
 ---
 
