--- a/blog/2024-04-07-week10-wap.md
+++ b/blog/2024-04-07-week10-wap.md
@@ -4,7 +4,7 @@ description: Week 10 - Sword swing
 slug: wap-10
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image:
 ---
 
