--- a/blog/2024-04-15-week11.md
+++ b/blog/2024-04-15-week11.md
@@ -4,7 +4,7 @@ description: Week 10 - Books and shelves
 slug: wap-11
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-11.2.jpg
 ---
 
