--- a/blog/2024-04-20-week12.md
+++ b/blog/2024-04-20-week12.md
@@ -4,7 +4,7 @@ description: Week 12 - Giant anteater
 slug: wap-12
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-12.1.jpg
 ---
 
