--- a/blog/2024-04-28-week13.md
+++ b/blog/2024-04-28-week13.md
@@ -4,7 +4,7 @@ description: Week 13 - Figure skaters
 slug: wap-13
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-13.1.jpg
 ---
 
