--- a/blog/2024-05-05-week14.md
+++ b/blog/2024-05-05-week14.md
@@ -4,7 +4,7 @@ description: Week 14 - Hawks
 slug: wap-14
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-14.0.jpg)
 ---
 
