--- a/blog/2024-05-20-week15.md
+++ b/blog/2024-05-20-week15.md
@@ -4,7 +4,7 @@ description: Week # - Penguins
 slug: wap-15
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image:
 ---
 
