--- a/blog/2024-05-21-week16.md
+++ b/blog/2024-05-21-week16.md
@@ -4,8 +4,8 @@ description: Week # - Hyenas
 slug: wap-16
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
-Image:
+tags: [art, wap]
+Image: /img/wap/wap-16.2.jpg
 ---
 
 This week I went for hyenas. They’ve always been pretty cool and feel like another “weird dog” type. But surprise surprise, I actually learned a lot about hyenas this week. First one being, they aren’t that closely related to dogs. Instead they are closer to the cat family but their closest animal relative is actually the meerkat.
