--- a/blog/2024-05-26-week17.md
+++ b/blog/2024-05-26-week17.md
@@ -4,7 +4,7 @@ description: Week # - Volleyball
 slug: wap-17
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-17.2.jpg
 ---
 
