--- a/blog/2024-06-07-week18.md
+++ b/blog/2024-06-07-week18.md
@@ -4,7 +4,7 @@ description: Week # - Sea turtles
 slug: wap-18
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image:
 ---
 
