--- a/blog/2024-06-08-week19.md
+++ b/blog/2024-06-08-week19.md
@@ -4,7 +4,7 @@ description: Week # - Chameleons
 slug: wap-19
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-19.3.1.jpg
 ---
 
