--- a/blog/2024-07-05-week20.md
+++ b/blog/2024-07-05-week20.md
@@ -4,7 +4,7 @@ description: Week 20 - Redraw
 slug: wap-20
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/artwork/butterfly-princess-2006.jpg
 ---
 
