--- a/blog/2024-07-15-week21.md
+++ b/blog/2024-07-15-week21.md
@@ -4,7 +4,7 @@ description: Week # - Waltz
 slug: wap-21
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-21.3.jpg
 ---
 
