--- a/blog/2024-07-29-week22-23.md
+++ b/blog/2024-07-29-week22-23.md
@@ -4,7 +4,7 @@ description: Week 22 and 23
 slug: wap-22-23
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-23.4.1.jpg
 ---
 
