--- a/blog/2024-08-06-week24.md
+++ b/blog/2024-08-06-week24.md
@@ -4,7 +4,7 @@ description: Week # - Sparrows
 slug: wap-24
 enableComments: true # for Gisqus
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-24.2.jpg
 ---
 
