--- a/blog/2024-08-13-week25.md
+++ b/blog/2024-08-13-week25.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 25
 description: Week 25 - Gymnastic bars
 slug: wap-25
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-25.3.2.jpg
 ---
 
