--- a/blog/2024-08-18-week26.md
+++ b/blog/2024-08-18-week26.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 26
 description: Week 26 - Griffins
 slug: wap-26
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image:
 ---
 
