--- a/blog/2024-09-06-week27.md
+++ b/blog/2024-09-06-week27.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 27
 description: Week 27 - Material studies
 slug: wap-27
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-27.6.jpg
 ---
 
