--- a/blog/2024-09-17-week28.md
+++ b/blog/2024-09-17-week28.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 28
 description: Week 28 - Raccoons
 slug: wap-28
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-28.2.jpg
 ---
 
