--- a/blog/2024-09-30-week29.md
+++ b/blog/2024-09-30-week29.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 29
 description: Week 29 - Horseback riding
 slug: wap-29
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-29.5.jpg
 ---
 
