--- a/blog/2024-10-06-week30.md
+++ b/blog/2024-10-06-week30.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 30
 description: Week 30 - Sugar Gliders
 slug: wap-30
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-30.5.jpg
 ---
 
