--- a/blog/2024-10-19-week31.md
+++ b/blog/2024-10-19-week31.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 31
 description: Week 31 - Flowers
 slug: wap-31
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-31.5.jpg
 ---
 
