--- a/blog/2024-10-27-week32.md
+++ b/blog/2024-10-27-week32.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 32
 description: Week 32 - Pokemon Ability Forms
 slug: wap-32
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-32.3.jpg
 ---
 
