--- a/blog/2024-11-03-week33.md
+++ b/blog/2024-11-03-week33.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 33
 description: Week 33 - Swimming
 slug: wap-33
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-33.4.2.jpg
 ---
 
