--- a/blog/2024-11-11-week34.md
+++ b/blog/2024-11-11-week34.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 34
 description: Week # - Pokemon Trainer
 slug: wap-34
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-34.2.jpg
 ---
 
