--- a/blog/2024-11-20-week35.md
+++ b/blog/2024-11-20-week35.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 35
 description: Week # - Horses
 slug: wap-35
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image:
 ---
 
