--- a/blog/2024-12-03-week36.md
+++ b/blog/2024-12-03-week36.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 36
 description: Week 36 - Bats
 slug: wap-36
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-36.3.2.jpg
 ---
 
