--- a/blog/2024-12-08-week37.md
+++ b/blog/2024-12-08-week37.md
@@ -3,7 +3,7 @@ title: Weekly Art Practice - Week 37
 description: Week 37 - Running
 slug: wap-37
 authors: [kylie]
-tags: [art]
+tags: [art, wap]
 Image: /img/wap/wap-37.3.2.jpg
 ---
 
