Add web preview image

--- a/blog/2024-12-30-wapup.md
+++ b/blog/2024-12-30-wapup.md
@@ -4,7 +4,7 @@ description: A year in review of my weekly art practice
 slug: wap-up
 authors: [kylie]
 tags: [art]
-Image:
+Image: /img/wap/cara_2024.png
 ---
 
 When I first launched into this goal of practicing art in a focused fashion every week I wasn’t sure I’d be able to maintain it. I also wasn’t sure if it was going to be a practice that would lead to noticeable improvements. Just drawing every day isn’t enough to keep getting better, so I was really relying on the focused methodology of practice flow to pay off.
