Remove broken link

--- a/blog/2024-12-30-wapup.md
+++ b/blog/2024-12-30-wapup.md
@@ -63,7 +63,7 @@ And Karina’s dynamic pose class:
 
 I spent some time looking at Domestika and did buy a map drawing course because I thought it would be a nice skill to develop for making D&D locations. But I only ended up getting a few hours in before bouncing off it. Maybe I can revisit it during the winter holidays.
 
-My favourite course of the year was probably Spencer Wan’s 2D visual effects course. It was a very intense 3(4?) hours but covered techniques I’d never seen before and really made a case for being an animator who specializes in effects. It felt like a course I could instantly take lessons from and apply them to Altar Stone videos. I shared my notes from it in my [WAP 24 post](​​https://www.kymira.ca/blog/wap-24).
+My favourite course of the year was probably Spencer Wan’s 2D visual effects course. It was a very intense 3(4?) hours but covered techniques I’d never seen before and really made a case for being an animator who specializes in effects. It felt like a course I could instantly take lessons from and apply them to Altar Stone videos. I shared my notes from it in my WAP 24 post (sparrows).
 
 My course consumption will probably remain similar in 2025, Drawfee classes every month and a few one-offs here and there as they come up. 
 
