--- a/blog/2025-01-14-swak2.md
+++ b/blog/2025-01-14-swak2.md
@@ -53,7 +53,7 @@ While conceptualizing our game we designed it around 7 days that the player woul
 
 Since our game is a romance sim it would mean choosing one of the love interests and completing their path before anyone else's. This proved difficult in a pretty big way in that one of the central parts of a romance sim is being able to choose who you romance. We worried that having one obviously foregrounded character would give the wrong vibe. 
 
-I kept pushing for finding a Golden Path during the build up week before the game as I’m familiar with watching new game makers spiral out of scope and get lost in the weeds. We talked it over multiple times, thinking about how the games break up in other ways. Just a day or two before the jam started we had the realization that if we wanted something that felt like a full game, we could scope by days instead of paths. We scoped down to the first 2 days of the story. The major downside being that this scoping didn’t help with scoping down asset requirements as we would still need art for each character and location.
+I kept pushing for finding a Golden Path during the build up week before the game as I’m familiar with watching new game makers spiral out of scope and get lost in the weeds. We talked it over multiple times, thinking about how the game breaks up in other ways. Just a day or two before the jam started we had the realization that if we wanted something that felt like a full game, we could scope by days instead of paths. We scoped down pretty drastically, to the first 2 days of the story. The major downside being that this scoping didn’t help with scoping down of asset requirements as we would still need art for each character and location.
 
 And while this did mean rushing through as much art as possible in the first few days, I think this scope is what’s to credit for us being able to publish Day 1 as version 0.1 before the end of week two.
 
