Add preview image

--- a/blog/2025-02-09-kf-study.md
+++ b/blog/2025-02-09-kf-study.md
@@ -4,7 +4,7 @@ description: A week spent studying the art style of the board game Root, as done
 slug: kyle-ferrin-study
 authors: [kylie]
 tags: [art, style study]
-Image:
+Image: /img/style-studies/kf-full-scene1.jpg
 ---
 
 As part of my WAP year I did one style study, [Ken Sugimori’s Pokemon trainers](https://www.kymira.ca/blog/wap-34). This year I’m going to attempt to do a style study every month to push me out of my comfort zone and also to learn to break down what I’m looking at when it comes to art pieces.
