Fix image tag capitalization

--- a/blog/2025-01-08-swak1.md
+++ b/blog/2025-01-08-swak1.md
@@ -4,7 +4,7 @@ Description: A recap of progress made on our SWAK game after the first week.
 slug: swak-1
 authors: [kylie]
 tags: [art, games]
-Image: /img/swak/launch_screen.png
+image: /img/swak/launch_screen.png
 ---
 
 New year new projects, starting with the [Sealed With a Kiss game jam](https://itch.io/jam/swakjam-2025). My wife and I started work on the project bright and early on January first. With just a few days of vacation left I wanted to get as many assets done as I could before returning to work on Monday. Which has led to creating more art in a few days than any period last year. 
