--- a/blog/2025-01-14-swak2.md
+++ b/blog/2025-01-14-swak2.md
@@ -4,7 +4,7 @@ Description: Week 2 summary on the progress of our SWAK game
 slug: swak-2
 authors: [kylie]
 tags: [art, games]
-Image: /img/swak/littos-itch.png
+image: /img/swak/littos-itch.png
 ---
 
 14 days in, so it’s time for another progress report on Love in the Time of Spellphage.
