--- a/blog/2025-01-21-swak3.md
+++ b/blog/2025-01-21-swak3.md
@@ -4,7 +4,7 @@ Description: Week 3 summary on the progress of our SWAK game. The making of a Mo
 slug: swak-3
 authors: [kylie]
 tags: [art, games]
-Image: /img/swak/parc_vs_park.jpg
+image: /img/swak/parc_vs_park.jpg
 ---
 
 It’s time for the week 3 summary. That’s 21 days of working on our game non-stop. Neither of us has taken a full day off since we started, doing probably 7-10 hours of work a day each (well, a little less for me on the days I go to my paying job). We’re still progressing at a nice pace but with more than half the month gone the to-do list feels a little scarier with each passing day.
