--- a/blog/2025-01-29-swak4.md
+++ b/blog/2025-01-29-swak4.md
@@ -4,7 +4,7 @@ Description: Week 4 summary on the progress of our SWAK game. The final push.
 slug: swak-4
 authors: [kylie]
 tags: [art, games]
-Image: /img/swak/lauren-spread.jpg
+image: /img/swak/lauren-spread.jpg
 ---
 
 Going into the final week, I’ve done my (very likely) final pull request for art assets. Have done a few playthroughs of the game, hunting down any bugs. Between how hard we worked early in the month and our success at avoiding too much scope creep, we’re hoping to submit the game in the next day or two with a day to spare before the deadline.
