--- a/blog/2025-02-23-week41.md
+++ b/blog/2025-02-23-week41.md
@@ -4,7 +4,7 @@ description: Week 41 - Beetles
 slug: wap-41
 authors: [kylie]
 tags: [art, wap]
-Image: /img/wap/wap-41.5.jpg
+image: /img/wap/wap-41.5.jpg
 ---
 
 First WAP of 2025! 
