Larger blog archive

--- a/blog/2025-05-31-may2025.md
+++ b/blog/2025-05-31-may2025.md
@@ -51,6 +51,6 @@ While Spellphage was the original building block for the game we’re now deep i
 
 June is shaping up to be a very busy month so I’m not sure if I’m going to be able to fully return to any kind of scheduled, consistent art practice. I suspect it will be more chipping away at existing pieces while workshopping lots of different card styles. 
 
-We’re going to attend the [Narrascope conference](​​https://narrascope.org) online later in the month. And I’ve signed up for [Spencer Wan’s draftmanship for animation](https://spencerwan.tumblr.com/post/780816079738011648/hey-yall-im-teaching-another-workshop-i-dont) lesson. Which I can’t find a page for so might actually be sold out already!
+We’re going to attend the [Narrascope conference](https://narrascope.org) online later in the month. And I’ve signed up for [Spencer Wan’s draftmanship for animation](https://spencerwan.tumblr.com/post/780816079738011648/hey-yall-im-teaching-another-workshop-i-dont) lesson. Which I can’t find a page for so might actually be sold out already!
 
 July is going to bring it possibly multiple medical things so I also don’t want to bank on feeling super great and inspired then. So maybe August, in the peak of summer heat, things might start to stabilise again...
